--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "email": "andrew@andrewduthie.com",
     "url": "https://andrewduthie.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aduth/StreamLens.git"
+  },
   "license": "GPL-2.0-or-later",
   "files": [
     "_locales",
