--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/lodash-es": "^4.17.3",
     "@wordpress/eslint-plugin": "^3.1.0",
     "eslint": "^6.6.0",
+    "fast-glob": "^3.1.0",
     "glob": "^7.1.6",
     "npm-pack-zip": "^1.2.7",
     "typescript": "^3.7.2",
