Assign JSDoc mode to TypeScript

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,10 @@
 			"tab",
 			{ "ignoredNodes": [ "TemplateLiteral *" ] }
 		]
+	},
+	"settings": {
+		"jsdoc": {
+			"mode": "typescript"
+		}
 	}
 }
