--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,10 @@
 		"indent": [
 			"error",
 			"tab",
-			{ "ignoredNodes": [ "TemplateLiteral *" ] }
+			{
+				"ignoredNodes": [ "TemplateLiteral *" ],
+				"SwitchCase": 1
+			}
 		]
 	},
 	"settings": {
