--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Browser extension for displaying live stream status for Twitch, Mixer",
   "scripts": {
     "prepare": "npm run prepare:modules && npm run prepare:vendor",
-    "prepare:modules": "pika install",
+    "prepare:modules": "pika install --clean",
     "prepare:vendor": "mkdir -p vendor && cp node_modules/webextension-polyfill/dist/browser-polyfill.min.js vendor/browser-polyfill.min.js",
     "test": "npm run test:lint && npm run test:types && npm run test:unit",
     "test:lint": "eslint .",
