Use dynamic imports for migration scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 				"*"
 			]
 		},
-		"module": "es2015",
+		"module": "esnext",
 		"moduleResolution": "node",
 		"target": "es2019",
 		"allowJs": true,
