--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Browser extension for displaying live stream status for Twitch, Mixer",
   "scripts": {
     "prepare": "npm run prepare:modules && npm run prepare:vendor",
-    "prepare:modules": "pika install --clean",
+    "prepare:modules": "snowpack --clean",
     "prepare:vendor": "mkdir -p vendor && cp node_modules/webextension-polyfill/dist/browser-polyfill.min.js vendor/browser-polyfill.min.js",
     "test": "npm run test:lint && npm run test:types && npm run test:unit",
     "test:lint": "eslint .",
@@ -48,7 +48,6 @@
     "!test"
   ],
   "dependencies": {
-    "@pika/web": "^0.6.1",
     "lodash-es": "^4.17.15",
     "preact": "^10.3.4",
     "unistore": "^3.5.1",
@@ -62,10 +61,11 @@
     "esm-root-loader": "^0.1.0",
     "fast-glob": "^3.2.2",
     "npm-pack-zip": "^1.2.7",
+    "snowpack": "^1.6.0",
     "typescript": "^3.8.3",
     "web-ext-types": "^3.2.1"
   },
-  "@pika/web": {
+  "snowpack": {
     "webDependencies": [
       "lodash-es",
       "preact",
