--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "lodash-es": "^4.17.15",
     "preact": "^10.3.4",
+    "prsh": "^1.0.0",
     "unistore": "^3.5.1",
     "unistore-browser-sync": "^1.0.0",
     "webextension-polyfill": "^0.6.0"
@@ -70,6 +71,7 @@
       "lodash-es",
       "preact",
       "preact/hooks",
+      "prsh",
       "unistore",
       "unistore-browser-sync"
     ]
