--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "version": "1.3.2",
   "description": "Browser extension for displaying live stream status for Twitch, Mixer",
   "scripts": {
-    "prepare": "npm run prepare:modules && npm run prepare:vendor",
-    "prepare:modules": "snowpack --optimize --clean",
-    "prepare:vendor": "mkdir -p vendor && cp node_modules/webextension-polyfill/dist/browser-polyfill.min.js vendor/browser-polyfill.min.js",
     "test": "npm run test:lint && npm run test:types && npm run test:unit",
+    "clean": "rm -rf web_modules",
+    "prepare": "npm run clean && rollup -c",
     "test:lint": "eslint .",
     "test:types": "tsc",
     "test:unit": "node --experimental-modules --experimental-loader=esm-root-loader test/runner.js",
@@ -33,7 +32,6 @@
     "images",
     "options",
     "popup",
-    "vendor",
     "web_modules",
     "auth.js",
     "background.html",
@@ -49,31 +47,24 @@
   ],
   "dependencies": {
     "lodash-es": "^4.17.15",
-    "preact": "^10.3.4",
+    "preact": "^10.4.7",
     "prsh": "^1.0.1",
-    "unistore": "^3.5.1",
+    "unistore": "^3.5.2",
     "unistore-browser-sync": "^1.0.0",
     "webextension-polyfill": "^0.6.0"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/lodash-es": "^4.17.3",
-    "@wordpress/eslint-plugin": "^4.0.0",
-    "eslint": "^6.8.0",
+    "@wordpress/eslint-plugin": "^7.1.0",
+    "es-module-lexer": "^0.3.24",
+    "eslint": "^7.7.0",
+    "eslint-plugin-jsdoc": "^30.2.2",
     "esm-root-loader": "^0.1.0",
-    "fast-glob": "^3.2.2",
+    "fast-glob": "^3.2.4",
     "npm-pack-zip": "^1.2.7",
-    "snowpack": "^1.6.0",
-    "typescript": "^3.8.3",
+    "rollup": "^2.26.0",
+    "typescript": "^3.9.7",
     "web-ext-types": "^3.2.1"
-  },
-  "snowpack": {
-    "webDependencies": [
-      "lodash-es",
-      "preact",
-      "preact/hooks",
-      "prsh",
-      "unistore",
-      "unistore-browser-sync"
-    ]
   }
 }
