--- a/package.json
+++ b/package.json
@@ -64,9 +64,11 @@
 		"eslint-plugin-prettier": "^3.1.4",
 		"esm-root-loader": "^0.1.0",
 		"fast-glob": "^3.2.4",
+		"magic-string": "^0.25.7",
 		"npm-pack-zip": "^1.2.7",
 		"prettier": "npm:wp-prettier@^2.0.5",
 		"rollup": "^2.26.0",
+		"rollup-plugin-sourcemaps": "^0.6.2",
 		"typescript": "^3.9.7",
 		"web-ext-types": "^3.2.1"
 	}
