--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
 	"name": "StreamLens",
 	"version": "1.3.2",
 	"description": "__MSG_extDescription__",
+	"content_security_policy": "script-src 'self' 'sha256-HYWnxwWLIBZVEoSK3a+ZqjB11maueBKP0C/ssZY2t5Y='; object-src 'self';",
 	"background": {
 		"page": "background.html"
 	},
@@ -21,7 +22,7 @@
 	"content_scripts": [
 		{
 			"matches": [ "https://streamlens.app/auth/" ],
-			"js": [ "web_modules/webextension-polyfill.js", "auth.js" ],
+			"js": [ "node_modules/webextension-polyfill/dist/browser-polyfill.js", "auth.js" ],
 			"all_frames": true
 		}
 	],
