--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
 	"description": "Browser extension for displaying live stream status for Twitch",
 	"scripts": {
 		"test": "npm run test:lint && npm run test:types && npm run test:unit",
-		"clean": "rm -rf web_modules",
-		"prepare": "npm run clean && rollup -c",
 		"test:lint": "eslint .",
 		"test:types": "tsc",
 		"test:unit": "node --experimental-modules --experimental-loader=esm-root-loader test/runner.js",
-		"prebundle": "npm run prepare",
 		"bundle": "npm-pack-zip"
 	},
 	"author": {
@@ -30,9 +27,9 @@
 		"common",
 		"fonts",
 		"images",
+		"node_modules",
 		"options",
 		"popup",
-		"web_modules",
 		"auth.js",
 		"background.html",
 		"common.css",
@@ -53,22 +50,25 @@
 		"unistore-browser-sync": "^1.0.0",
 		"webextension-polyfill": "^0.6.0"
 	},
+  "bundledDependencies": [
+    "lodash-es",
+    "preact",
+    "prsh",
+    "unistore",
+    "unistore-browser-sync",
+    "webextension-polyfill"
+  ],
 	"devDependencies": {
-		"@rollup/plugin-node-resolve": "^9.0.0",
 		"@types/lodash-es": "^4.17.3",
 		"@wordpress/eslint-plugin": "^7.1.0",
-		"es-module-lexer": "^0.3.24",
 		"eslint": "^7.7.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-jsdoc": "^30.2.2",
 		"eslint-plugin-prettier": "^3.1.4",
 		"esm-root-loader": "^0.1.0",
 		"fast-glob": "^3.2.4",
-		"magic-string": "^0.25.7",
 		"npm-pack-zip": "^1.2.7",
 		"prettier": "npm:wp-prettier@^2.0.5",
-		"rollup": "^2.26.0",
-		"rollup-plugin-sourcemaps": "^0.6.2",
 		"typescript": "^3.9.7",
 		"web-ext-types": "^3.2.1"
 	}
