Adopt ESBuild for build
Sadly, it's time to incorporate a build step:

1. JSX is a much nicer development experience than raw JavaScript for constructing Preact elements. HTM comes close, but the inability to incorporate type-checking in a non-starter.
2. The pre-bundling step with Rollup to generate web_modules (previously implemented using Snowpack) is much complexity.
3. ESBuild is very fast
4. Opens up the option of using native TypeScript
5. Chrome adds native support for import-maps in v89 (woo!), but Firefox support is not yet on the horizon
6. Probably faster loading experience to prebundle distributable

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,40 +2,26 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"/web_modules/*.js": [
-				"node_modules/@types/*",
-				"node_modules/*",
-				"web_modules/*.js"
-			],
-			"/*": [
-				"*"
-			]
+			"/*": [ "*" ]
 		},
 		"module": "esnext",
 		"moduleResolution": "node",
 		"target": "es2019",
 		"allowJs": true,
 		"checkJs": true,
-		"lib": [
-			"dom",
-			"esnext"
-		],
+		"lib": [ "dom", "esnext" ],
 		"skipLibCheck": true,
-		"typeRoots": [
-			"node_modules/@types",
-			"node_modules/web-ext-types"
-		],
+		"typeRoots": [ "node_modules/@types", "node_modules/web-ext-types" ],
 		"noEmit": true,
 		"strictNullChecks": true
 	},
 	"include": [
 		"background",
-		"common",
+		"packages",
 		"options",
-		"popup"
+		"popup",
+		"packages/hooks",
+		"packages/components"
 	],
-	"exclude": [
-		"node_modules",
-		"web_modules"
-	]
+	"exclude": [ "node_modules" ]
 }
