--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
 	"type": "module",
 	"version": "1.3.2",
 	"description": "Browser extension for displaying live stream status for Twitch",
+	"workspaces": [
+		"packages/**"
+	],
 	"scripts": {
+		"build": "esbuild background/index.js popup/index.js options/index.js --bundle --outdir=build --format=esm",
+		"dev": "esbuild background/index.js popup/index.js options/index.js --bundle --outdir=build --format=esm --sourcemap=inline --watch",
 		"test": "npm run test:lint && npm run test:types && npm run test:unit",
-		"clean": "rm -rf web_modules",
-		"prepare": "npm run clean && rollup -c",
+		"clean": "rm -rf build",
+		"prepare": "npm run clean && npm run build",
 		"test:lint": "eslint .",
 		"test:types": "tsc",
-		"test:unit": "node --experimental-modules --experimental-loader=esm-root-loader test/runner.js",
+		"test:unit": "node test/runner.js",
 		"prebundle": "npm run prepare",
 		"bundle": "npm-pack-zip"
 	},
@@ -26,13 +31,10 @@
 	"license": "GPL-3.0-or-later",
 	"files": [
 		"_locales",
-		"background",
-		"common",
+		"build",
 		"fonts",
 		"images",
-		"options",
-		"popup",
-		"web_modules",
+		"node_modules/webextension-polyfill/dist/browser-polyfill.js",
 		"auth.js",
 		"background.html",
 		"common.css",
@@ -46,29 +48,28 @@
 		"!test"
 	],
 	"dependencies": {
-		"lodash-es": "^4.17.15",
+		"lodash-es": "^4.17.21",
 		"preact": "^10.4.7",
 		"prsh": "^1.0.1",
 		"unistore": "^3.5.2",
 		"unistore-browser-sync": "^1.0.0",
 		"webextension-polyfill": "^0.6.0"
 	},
+	"bundledDependencies": [
+		"webextension-polyfill"
+	],
 	"devDependencies": {
-		"@rollup/plugin-node-resolve": "^9.0.0",
-		"@types/lodash-es": "^4.17.3",
+		"@types/lodash-es": "^4.17.4",
+		"@types/node": "^14.14.32",
 		"@wordpress/eslint-plugin": "^7.1.0",
-		"es-module-lexer": "^0.3.24",
+		"esbuild": "^0.8.56",
 		"eslint": "^7.7.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-jsdoc": "^30.2.2",
 		"eslint-plugin-prettier": "^3.1.4",
-		"esm-root-loader": "^0.1.0",
 		"fast-glob": "^3.2.4",
-		"magic-string": "^0.25.7",
 		"npm-pack-zip": "^1.2.7",
 		"prettier": "npm:wp-prettier@^2.0.5",
-		"rollup": "^2.26.0",
-		"rollup-plugin-sourcemaps": "^0.6.2",
 		"typescript": "^4.2.3",
 		"web-ext-types": "^3.2.1"
 	}
