--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,29 @@
 {
-	"extends": [
-		"plugin:@wordpress/eslint-plugin/recommended-with-formatting",
-		"plugin:prettier/recommended",
-		"prettier/react"
-	],
+	"extends": ["eslint:recommended", "plugin:prettier/recommended"],
 	"parserOptions": {
-		"ecmaVersion": 2019,
+		"ecmaVersion": 2020,
 		"sourceType": "module"
+	},
+	"env": {
+		"es6": true,
+		"browser": true
 	},
 	"globals": {
 		"browser": true
 	},
-	"settings": {
-		"jsdoc": {
-			"mode": "typescript"
-		}
-	},
 	"rules": {
-		"prettier/prettier": "error"
-	}
+		"prettier/prettier": "error",
+		"no-async-promise-executor": "off",
+		"no-empty": ["error", { "allowEmptyCatch": true }],
+		"no-prototype-builtins": "off"
+	},
+	"overrides": [
+		{
+			"files": ["test/**/*"],
+			"env": {
+				"browser": false,
+				"node": true
+			}
+		}
+	]
 }
