--- a/package.json
+++ b/package.json
@@ -61,15 +61,13 @@
 	"devDependencies": {
 		"@types/lodash-es": "^4.17.4",
 		"@types/node": "^14.14.32",
-		"@wordpress/eslint-plugin": "^7.1.0",
 		"esbuild": "^0.8.56",
-		"eslint": "^7.7.0",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-jsdoc": "^30.2.2",
-		"eslint-plugin-prettier": "^3.1.4",
+		"eslint": "^7.21.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-prettier": "^3.3.1",
 		"fast-glob": "^3.2.4",
 		"npm-pack-zip": "^1.2.7",
-		"prettier": "npm:wp-prettier@^2.0.5",
+		"prettier": "^2.2.1",
 		"typescript": "^4.2.3",
 		"web-ext-types": "^3.2.1"
 	}
