Rename JSX files as JSX
Easier to initialize esbuild loader

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
 	},
 	"rules": {
 		"prettier/prettier": "error",
+		"react/jsx-filename-extension": "error",
 		"react/jsx-uses-react": "error",
 		"react/jsx-uses-vars": "error",
 		"react/react-in-jsx-scope": "error",
