--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,12 @@
 {
-	"extends": ["eslint:recommended", "plugin:prettier/recommended"],
+	"extends": ["@aduth/eslint-config"],
 	"plugins": ["react"],
 	"parserOptions": {
-		"ecmaVersion": 2020,
-		"sourceType": "module",
 		"ecmaFeatures": {
 			"jsx": true
 		}
 	},
 	"env": {
-		"es6": true,
 		"browser": true
 	},
 	"globals": {
@@ -22,14 +19,10 @@
 		}
 	},
 	"rules": {
-		"prettier/prettier": "error",
 		"react/jsx-filename-extension": "error",
 		"react/jsx-uses-react": "error",
 		"react/jsx-uses-vars": "error",
-		"react/react-in-jsx-scope": "error",
-		"no-async-promise-executor": "off",
-		"no-empty": ["error", { "allowEmptyCatch": true }],
-		"no-prototype-builtins": "off"
+		"react/react-in-jsx-scope": "error"
 	},
 	"overrides": [
 		{
