--- a/package.json
+++ b/package.json
@@ -59,18 +59,19 @@
 		"webextension-polyfill"
 	],
 	"devDependencies": {
+		"@aduth/eslint-config": "^4.0.1",
 		"@types/lodash-es": "^4.17.4",
-		"@types/node": "^14.14.41",
+		"@types/node": "^15.12.2",
 		"esbuild": "^0.11.14",
 		"esbuild-esm-loader": "^0.1.0",
-		"eslint": "^7.25.0",
+		"eslint": "^7.28.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^3.4.0",
-		"eslint-plugin-react": "^7.23.2",
+		"eslint-plugin-react": "^7.24.0",
 		"fast-glob": "^3.2.5",
 		"npm-pack-zip": "^1.2.9",
-		"prettier": "^2.2.1",
-		"typescript": "^4.2.4",
+		"prettier": "^2.3.1",
+		"typescript": "^4.3.2",
 		"web-ext-types": "^3.2.1"
 	}
 }
