Switch to Mocha for tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,10 +26,11 @@
 	},
 	"overrides": [
 		{
-			"files": ["test/**/*"],
+			"files": ["**/test/**/*"],
 			"env": {
 				"browser": false,
-				"node": true
+				"node": true,
+				"mocha": true
 			}
 		}
 	]
