--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"prepare": "npm run clean && npm run build",
 		"test:lint": "eslint .",
 		"test:types": "tsc",
-		"test:unit": "node --experimental-loader esbuild-esm-loader test/runner.js",
+		"test:unit": "node --experimental-loader esbuild-esm-loader node_modules/mocha/lib/cli/cli.js --extension js,jsx -r ./test/setup.js '{background,options,packages,popup}/**/test/*'",
 		"prebundle": "npm run prepare",
 		"bundle": "npm-pack-zip"
 	},
@@ -60,15 +60,18 @@
 	],
 	"devDependencies": {
 		"@aduth/eslint-config": "^4.2.1",
+		"@types/chai": "^4.2.21",
 		"@types/lodash-es": "^4.17.4",
+		"@types/mocha": "^8.2.3",
 		"@types/node": "^16.3.1",
+		"chai": "^4.3.4",
 		"esbuild": "^0.12.15",
 		"esbuild-esm-loader": "^0.1.0",
 		"eslint": "^7.30.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-react": "^7.24.0",
-		"fast-glob": "^3.2.7",
+		"mocha": "^9.0.2",
 		"npm-pack-zip": "^1.2.9",
 		"prettier": "^2.3.2",
 		"typescript": "^4.3.5",
