Convert to TypeScript

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
 	],
 	"scripts": {
 		"build": "esbuild background/index.js popup/index.jsx options/index.jsx --bundle --outdir=build --format=esm --jsx-factory=h --jsx-fragment=Fragment --minify",
-		"dev": "esbuild background/index.js popup/index.jsx options/index.jsx --bundle --outdir=build --format=esm --jsx-factory=h --jsx-fragment=Fragment --sourcemap=inline --watch",
+		"dev": "esbuild background/index.js popup/index.jsx options/index.jsx --sourcemap --bundle --outdir=build --format=esm --jsx-factory=h --jsx-fragment=Fragment --sourcemap=inline --watch",
 		"test": "npm run test:lint && npm run test:types && npm run test:unit",
 		"clean": "rm -rf build",
 		"prepare": "npm run clean && npm run build",
 		"test:lint": "eslint .",
 		"test:types": "tsc",
-		"test:unit": "node --experimental-loader esbuild-esm-loader node_modules/mocha/lib/cli/cli.js --extension js,jsx -r ./test/setup.js '{background,options,packages,popup}/**/test/*'",
+		"test:unit": "node --experimental-loader esbuild-esm-loader node_modules/mocha/lib/cli/cli.js --extension js,jsx,ts,tsx -r ./test/setup.ts '{background,options,packages,popup}/**/test/*'",
 		"prebundle": "npm run prepare",
 		"bundle": "npm-pack-zip"
 	},
@@ -63,10 +63,10 @@
 		"@types/chai": "^4.2.22",
 		"@types/lodash-es": "^4.17.5",
 		"@types/mocha": "^9.0.0",
-		"@types/node": "^16.10.2",
+		"@types/node": "^16.11.7",
 		"chai": "^4.3.4",
 		"esbuild": "^0.13.3",
-		"esbuild-esm-loader": "^0.1.0",
+		"esbuild-esm-loader": "^0.1.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
