--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -2,5 +2,7 @@
 	"name": "@streamlens/state",
 	"private": true,
 	"type": "module",
-	"main": "index.js"
+	"exports": {
+		".": "./index.ts"
+	}
 }
