--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
 		"@types/lodash-es": "^4.17.5",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^16.11.7",
+		"@typescript-eslint/eslint-plugin": "^5.3.1",
+		"@typescript-eslint/parser": "^5.3.1",
 		"chai": "^4.3.4",
-		"esbuild": "^0.13.3",
+		"esbuild": "^0.13.12",
 		"esbuild-esm-loader": "^0.1.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
