Upgrade aduth/eslint-config to latest
Absorb rule disabling

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,13 +22,7 @@
 		"react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
 		"react/jsx-uses-react": "error",
 		"react/jsx-uses-vars": "error",
-		"react/react-in-jsx-scope": "error",
-		"no-unused-vars": "off",
-		"@typescript-eslint/no-unused-vars": ["error"],
-		"@typescript-eslint/no-explicit-any": "off",
-		"@typescript/no-non-null-assertion": "off",
-		"@typescript-eslint/no-empty-function": "off",
-		"@typescript-eslint/ban-ts-comment": "off"
+		"react/react-in-jsx-scope": "error"
 	},
 	"overrides": [
 		{
