Adapt providers initializer as component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
 		"react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
 		"react/jsx-uses-react": "error",
 		"react/jsx-uses-vars": "error",
-		"react/react-in-jsx-scope": "error"
+		"react/react-in-jsx-scope": "error",
+		"array-callback-return": ["error", { "allowImplicit": true }]
 	},
 	"overrides": [
 		{
