--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
 	"name": "stream-lens",
 	"private": true,
-	"type": "module",
 	"version": "1.3.2",
 	"description": "Browser extension for displaying live stream status for Twitch",
 	"workspaces": [
@@ -15,7 +14,7 @@
 		"prepare": "npm run clean && npm run build",
 		"test:lint": "eslint .",
 		"test:types": "tsc",
-		"test:unit": "mocha --extension js,jsx,ts,tsx -r ./test/setup.ts '{background,options,packages,popup}/**/test/*'",
+		"test:unit": "mocha '{background,options,packages,popup}/**/test/*'",
 		"prebundle": "npm run prepare",
 		"bundle": "npm-pack-zip"
 	},
@@ -60,15 +59,19 @@
 	],
 	"devDependencies": {
 		"@aduth/eslint-config": "^4.3.0",
+		"@testing-library/dom": "^8.11.1",
+		"@testing-library/preact": "^2.0.1",
 		"@types/chai": "^4.2.22",
 		"@types/lodash-es": "^4.17.5",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^16.11.7",
+		"@types/sinon": "^10.0.6",
+		"@types/sinon-chai": "^3.2.5",
 		"@typescript-eslint/eslint-plugin": "^5.3.1",
 		"@typescript-eslint/parser": "^5.3.1",
 		"chai": "^4.3.4",
-		"esbuild": "^0.13.12",
-		"esbuild-esm-loader": "^0.2.0",
+		"esbuild": "^0.13.13",
+		"esbuild-register": "^3.1.2",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
@@ -76,7 +79,10 @@
 		"mocha": "^9.1.3",
 		"npm-pack-zip": "^1.2.9",
 		"prettier": "^2.4.1",
+		"sinon": "^12.0.1",
+		"sinon-chai": "^3.7.0",
 		"typescript": "^4.4.4",
+		"undom": "^0.4.0",
 		"web-ext-types": "^3.2.1"
 	}
 }
