--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 	],
 	"dependencies": {
 		"lodash-es": "^4.17.21",
-		"preact": "^10.5.15",
+		"preact": "^10.6.4",
 		"unistore": "^3.5.2",
 		"unistore-browser-sync": "^1.1.0",
 		"webextension-polyfill": "^0.8.0"
@@ -57,30 +57,31 @@
 		"webextension-polyfill"
 	],
 	"devDependencies": {
-		"@aduth/eslint-config": "^4.3.0",
-		"@testing-library/dom": "^8.11.1",
+		"@aduth/eslint-config": "^4.4.1",
+		"@testing-library/dom": "^8.11.2",
 		"@testing-library/preact": "^2.0.1",
-		"@types/chai": "^4.2.22",
+		"@types/chai": "^4.3.0",
 		"@types/lodash-es": "^4.17.5",
-		"@types/mocha": "^9.0.0",
-		"@types/node": "^16.11.7",
-		"@types/sinon": "^10.0.6",
-		"@types/sinon-chai": "^3.2.5",
-		"@typescript-eslint/eslint-plugin": "^5.3.1",
-		"@typescript-eslint/parser": "^5.3.1",
+		"@types/mocha": "^9.1.0",
+		"@types/node": "^17.0.10",
+		"@types/sinon": "^10.0.8",
+		"@types/sinon-chai": "^3.2.8",
+		"@typescript-eslint/eslint-plugin": "^5.10.0",
+		"@typescript-eslint/parser": "^5.10.0",
 		"chai": "^4.3.4",
-		"esbuild": "^0.13.13",
-		"esbuild-register": "^3.1.2",
-		"eslint": "^7.32.0",
+		"esbuild": "^0.14.13",
+		"esbuild-esm-loader": "^0.2.3",
+		"esbuild-register": "^3.3.2",
+		"eslint": "^8.7.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-react": "^7.26.1",
-		"mocha": "^9.1.3",
-		"npm-pack-zip": "^1.2.9",
-		"prettier": "^2.4.1",
+		"eslint-plugin-react": "^7.28.0",
+		"mocha": "^9.1.4",
+		"npm-pack-zip": "^1.3.0",
+		"prettier": "^2.5.1",
 		"sinon": "^12.0.1",
 		"sinon-chai": "^3.7.0",
-		"typescript": "^4.4.4",
+		"typescript": "^4.5.5",
 		"undom": "^0.4.0",
 		"web-ext-types": "^3.2.1"
 	}
