Use ESBuild new automatic JSX runtime

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,7 @@
 		"typeRoots": ["node_modules/@types", "node_modules/web-ext-types"],
 		"noEmit": true,
 		"strictNullChecks": true,
-		"jsx": "preserve",
-		"jsxFactory": "h",
-		"jsxFragmentFactory": "Fragment",
+		"jsx": "react-jsx",
 		"jsxImportSource": "preact"
 	},
 	"include": [
