--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
 	"extends": ["@aduth/eslint-config"],
-	"plugins": ["react"],
+	"plugins": ["react", "import"],
 	"parserOptions": {
 		"ecmaFeatures": {
 			"jsx": true
@@ -14,6 +14,8 @@
 		"globalThis": true
 	},
 	"rules": {
+		"import/no-duplicates": "error",
+		"no-duplicate-imports": "off",
 		"react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
 		"react/jsx-uses-react": "error",
 		"react/jsx-uses-vars": "error",
