--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"esbuild-register": "^3.3.3",
 		"eslint": "^8.20.0",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.30.1",
 		"mocha": "^10.0.0",
